tests/snapshots/examples_fixtures/aether__fbip_failure_cases.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/fbip_failure_cases.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `Aether.FbipImportedSupport` to import.

  examples/aether/fbip_failure_cases.flx:1:1
  |
1 | import Aether.FbipImportedSupport as Imported
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Aether.FbipImportedSupport.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Aether.FbipImportedSupport` under roots: examples/aether, src (imported from examples/aether/fbip_failure_cases.flx).
== stdout ==
<not executed>
